apps/headscale/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  namespace: halo
  labels:
    app: headscale
spec:
  selector:
    app: headscale
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: grpc
    port: 50443
    protocol: TCP
    targetPort: 50443
  - name: metrics
    port: 9090
    protocol: TCP
    targetPort: 9090
  type: ClusterIP
