apps/headscale/manifests/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale-ui
  namespace: halo
spec:
  ingressClassName: nginx # Specify the nginx ingress class explicitly
  rules:
  - host: headscale.halo.fabseit.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headscale-ui
            port:
              number: 80
  tls:
  - hosts:
    - headscale.halo.fabseit.net
    secretName: local-fabseit-net-prod-tls
